// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> DestructiveDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--destructive"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> DestructiveLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--destructive"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> DestructiveNoIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--destructive"
>
  Button
</button>
`;

exports[`<Button /> FullWidth story renders snapshot 1`] = `
<button
  class="button button--lg button--primary button--full-width"
>
  Button
</button>
`;

exports[`<Button /> IconButtonDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--icon"
  disabled=""
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonIconOnly story renders snapshot 1`] = `
<button
  class="button button--lg button--icon"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      go back
    </title>
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonIconOnlySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--icon"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      go back
    </title>
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--icon"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonLeftIconSmall story renders snapshot 1`] = `
<button
  class="button button--sm button--icon"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonRightIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--icon"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonRightIconSmall story renders snapshot 1`] = `
<button
  class="button button--sm button--icon"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> LinkDisabled story renders snapshot 1`] = `
<button
  class="button button--link"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> LinkNoIcon story renders snapshot 1`] = `
<button
  class="button button--link"
>
  Button
</button>
`;

exports[`<Button /> LinkRightIcon story renders snapshot 1`] = `
<button
  class="button button--link"
>
  Button
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      opens in a new tab
    </title>
    <use
      xlink:href="test-file-stub#open-in-new"
    />
  </svg>
</button>
`;

exports[`<Button /> Loading story renders snapshot 1`] = `
<button
  class="button button--lg button--primary eds-is-loading"
  disabled=""
  tabindex="-1"
>
  <svg
    class="icon button__icon-loading"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      loading
    </title>
    <use
      xlink:href="test-file-stub#spinner"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> PrimaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--primary"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> PrimaryLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--primary"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> PrimaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--primary"
>
  Button
</button>
`;

exports[`<Button /> PrimaryNoIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--primary"
>
  Button
</button>
`;

exports[`<Button /> PrimaryRightIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--primary"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> PrimarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--primary"
>
  Button
</button>
`;

exports[`<Button /> SecondaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> SecondaryLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> SecondaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--secondary"
>
  Button
</button>
`;

exports[`<Button /> SecondaryNoIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary"
>
  Button
</button>
`;

exports[`<Button /> SecondaryRightIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> SecondarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--secondary"
>
  Button
</button>
`;

exports[`<Button /> TeritaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--tertiary"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> TeritaryLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--tertiary"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> TeritaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--tertiary"
>
  Button
</button>
`;

exports[`<Button /> TeritaryNoIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--tertiary"
>
  Button
</button>
`;

exports[`<Button /> TeritaryRightIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--tertiary"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> TeritarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--tertiary"
>
  Button
</button>
`;
